Clean requirements.txt

--- a/postflop_equity.ipynb
+++ b/postflop_equity.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/2.peterfaveroproductive/Desktop/Cornell/Archives/Projects Archive/monte_carlo_preflop_equity_calculator/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/Users/pf-admin/Desktop/Notebook/projects/monte_carlo_equity_calculator/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -52,16 +52,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Thread   7/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 600.26it/s]\n",
-      "Thread   1/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 571.76it/s]\n",
-      "Thread   0/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 568.34it/s]\n",
-      "Thread   4/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 587.36it/s]\n",
-      "Thread   6/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 578.38it/s]\n",
-      "Thread   2/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 562.55it/s]\n",
-      "Thread   3/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 562.59it/s]\n",
-      "Thread   5/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 569.08it/s]\n",
-      "Retrieving results from all cores: 100%|██████████| 8/8 [00:02<00:00,  2.97it/s]\n",
-      "Combining results from all cores : 100%|██████████| 8/8 [00:00<00:00, 234646.38it/s]\n"
+      "Thread   1/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 577.51it/s]\n",
+      "Thread   3/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 594.86it/s]\n",
+      "Thread   0/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 581.49it/s]\n",
+      "Thread   4/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 579.86it/s]\n",
+      "Thread   2/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 562.94it/s]\n",
+      "Thread   5/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 542.59it/s]\n",
+      "Thread   6/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 549.97it/s]\n",
+      "Thread   7/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 540.19it/s]\n",
+      "Retrieving results from all cores: 100%|██████████| 8/8 [00:02<00:00,  3.37it/s]\n",
+      "Combining results from all cores : 100%|██████████| 8/8 [00:00<00:00, 174762.67it/s]\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
     {
      "data": {
       "text/plain": [
-       "{'n': 7354, 'equity': 0.8790454174598857}"
+       "{'n': 7338, 'equity': 0.878440992095939}"
       ]
      },
      "execution_count": 4,
@@ -99,7 +99,7 @@
     {
      "data": {
       "text/plain": [
-       "{'n': 7359, 'equity': 0.06971055849979617}"
+       "{'n': 7316, 'equity': 0.06793329688354292}"
       ]
      },
      "execution_count": 5,
@@ -128,7 +128,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
