--- a/postflop_equity.ipynb
+++ b/postflop_equity.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/pf-admin/Desktop/Notebook/projects/monte_carlo_equity_calculator/venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lib import postflop_equity_monte_carlo, postflop_equity_monte_carlo_parallel\n",
     "import multiprocessing"
@@ -35,80 +26,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hero_hand = \"TsTc\"\n",
-    "villain_hand = \"JhTd9c\""
+    "hero_hand = \"7s2d\"\n",
+    "board = \"JdTd9d\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Thread   1/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 577.51it/s]\n",
-      "Thread   3/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 594.86it/s]\n",
-      "Thread   0/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 581.49it/s]\n",
-      "Thread   4/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 579.86it/s]\n",
-      "Thread   2/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 562.94it/s]\n",
-      "Thread   5/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 542.59it/s]\n",
-      "Thread   6/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 549.97it/s]\n",
-      "Thread   7/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 1000/1000 [00:01<00:00, 540.19it/s]\n",
-      "Retrieving results from all cores: 100%|██████████| 8/8 [00:02<00:00,  3.37it/s]\n",
-      "Combining results from all cores : 100%|██████████| 8/8 [00:00<00:00, 174762.67it/s]\n"
+      "Thread   0/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 611.39it/s]\n",
+      "Thread   1/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 609.72it/s]\n",
+      "Thread   6/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 607.41it/s]\n",
+      "Thread   7/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 607.50it/s]\n",
+      "Thread   5/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 605.75it/s]\n",
+      "Thread   2/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 603.06it/s]\n",
+      "Thread   4/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 600.54it/s]\n",
+      "Thread   3/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 599.81it/s]\n",
+      "Retrieving results from all cores: 100%|██████████| 8/8 [00:17<00:00,  2.14s/it]\n",
+      "Combining results from all cores : 100%|██████████| 8/8 [00:00<00:00, 286790.02it/s]\n"
      ]
     }
    ],
    "source": [
     "num_cores = multiprocessing.cpu_count()  \n",
-    "num_iterations_per_core = 1_000  \n",
-    "equity_dict = postflop_equity_monte_carlo_parallel(hero_hand, villain_hand, num_iterations_per_core, num_cores)"
+    "num_iterations_per_core = 10_000  \n",
+    "equity_dict = postflop_equity_monte_carlo_parallel(hero_hand, board, num_iterations_per_core, num_cores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n': 7338, 'equity': 0.878440992095939}"
+       "{'n': 73290, 'equity': 0.4414585891663256}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "equity_dict[\"AsAd\"]"
+    "equity_dict[\"AsAc\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n': 7316, 'equity': 0.06793329688354292}"
+       "{'n': 73263, 'equity': 0.3331968387862905}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "equity_dict[\"JsJd\"]"
+    "equity_dict[\"JsJc\"]"
    ]
   }
  ],
