--- a/postflop_equity.ipynb
+++ b/postflop_equity.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,33 +26,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hero_hand = \"7s2d\"\n",
-    "board = \"JdTd9d\""
+    "hero_hand = \"8d7d\"\n",
+    "board = \"9dTd2c\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Thread   0/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 611.39it/s]\n",
-      "Thread   1/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 609.72it/s]\n",
-      "Thread   6/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 607.41it/s]\n",
-      "Thread   7/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 607.50it/s]\n",
-      "Thread   5/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 605.75it/s]\n",
-      "Thread   2/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 603.06it/s]\n",
-      "Thread   4/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 600.54it/s]\n",
-      "Thread   3/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 599.81it/s]\n",
-      "Retrieving results from all cores: 100%|██████████| 8/8 [00:17<00:00,  2.14s/it]\n",
-      "Combining results from all cores : 100%|██████████| 8/8 [00:00<00:00, 286790.02it/s]\n"
+      "Thread   1/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 598.06it/s]\n",
+      "Thread   2/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 595.98it/s]\n",
+      "Thread   4/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 594.56it/s]\n",
+      "Thread   3/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 593.91it/s]\n",
+      "Thread   0/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 592.57it/s]\n",
+      "Thread   5/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 593.24it/s]\n",
+      "Thread   6/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 592.34it/s]\n",
+      "Thread   7/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 591.79it/s]\n",
+      "Retrieving results from all cores: 100%|██████████| 8/8 [00:17<00:00,  2.17s/it]\n",
+      "Combining results from all cores : 100%|██████████| 8/8 [00:00<00:00, 209715.20it/s]\n"
      ]
     }
    ],
@@ -64,16 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n': 73290, 'equity': 0.4414585891663256}"
+       "{'n': 73259, 'equity': 0.5624291895876274}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,28 +84,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n': 73263, 'equity': 0.3331968387862905}"
+       "{'n': 73186, 'equity': 0.5455688246385921}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "equity_dict[\"JsJc\"]"
+    "equity_dict[\"QsQc\"]"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
