remove old code

--- a/postflop_equity.ipynb
+++ b/postflop_equity.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pf-admin/Desktop/Notebook/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from lib import postflop_equity_monte_carlo, postflop_equity_monte_carlo_parallel\n",
     "import multiprocessing"
@@ -26,33 +35,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hero_hand = \"8d7d\"\n",
-    "board = \"9dTd2c\""
+    "hero_hand = \"Ks5s\"\n",
+    "board = \"6hKh9s\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Thread   1/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 598.06it/s]\n",
-      "Thread   2/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 595.98it/s]\n",
-      "Thread   4/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 594.56it/s]\n",
-      "Thread   3/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 593.91it/s]\n",
-      "Thread   0/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 592.57it/s]\n",
-      "Thread   5/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 593.24it/s]\n",
-      "Thread   6/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 592.34it/s]\n",
-      "Thread   7/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:16<00:00, 591.79it/s]\n",
-      "Retrieving results from all cores: 100%|██████████| 8/8 [00:17<00:00,  2.17s/it]\n",
-      "Combining results from all cores : 100%|██████████| 8/8 [00:00<00:00, 209715.20it/s]\n"
+      "Thread   4/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:22<00:00, 440.28it/s]\n",
+      "Thread   6/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:22<00:00, 440.45it/s]\n",
+      "Thread   3/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:22<00:00, 439.15it/s]\n",
+      "Thread   2/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:22<00:00, 438.55it/s]\n",
+      "Thread   7/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:22<00:00, 438.39it/s]\n",
+      "Thread   0/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:22<00:00, 438.32it/s]\n",
+      "Thread   5/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:22<00:00, 438.19it/s]\n",
+      "Thread   1/8 | Postflop Monte-Carlo Simulation Progress: 100%|██████████| 10000/10000 [00:22<00:00, 437.41it/s]\n",
+      "Retrieving results from all cores: 100%|██████████| 8/8 [00:23<00:00,  2.95s/it]\n",
+      "Combining results from all cores : 100%|██████████| 8/8 [00:00<00:00, 198546.93it/s]\n"
      ]
     }
    ],
@@ -64,42 +73,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'n': 73259, 'equity': 0.5624291895876274}"
+       "{'n': 73054, 'equity': 0.4988912311440852}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "equity_dict[\"AsAc\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'n': 73186, 'equity': 0.5455688246385921}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "equity_dict[\"QsQc\"]"
+    "equity_dict[\"Jh9h\"]"
    ]
   }
  ],
@@ -119,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
